#
# Copyright 2009-2017 Alibaba Cloud All rights reserved.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

set(public_header_dir ${CMAKE_CURRENT_SOURCE_DIR}/../include)

set(alidns_public_header 
	include/alibabacloud/alidns/AlidnsClient.h
	include/alibabacloud/alidns/AlidnsExport.h )

set(alidns_public_header_model 
	include/alibabacloud/alidns/model/AddCustomLineRequest.h
	include/alibabacloud/alidns/model/AddCustomLineResult.h
	include/alibabacloud/alidns/model/AddDnsCacheDomainRequest.h
	include/alibabacloud/alidns/model/AddDnsCacheDomainResult.h
	include/alibabacloud/alidns/model/AddDnsGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/AddDnsGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/AddDnsGtmAddressPoolRequest.h
	include/alibabacloud/alidns/model/AddDnsGtmAddressPoolResult.h
	include/alibabacloud/alidns/model/AddDnsGtmMonitorRequest.h
	include/alibabacloud/alidns/model/AddDnsGtmMonitorResult.h
	include/alibabacloud/alidns/model/AddDomainRequest.h
	include/alibabacloud/alidns/model/AddDomainResult.h
	include/alibabacloud/alidns/model/AddDomainBackupRequest.h
	include/alibabacloud/alidns/model/AddDomainBackupResult.h
	include/alibabacloud/alidns/model/AddDomainGroupRequest.h
	include/alibabacloud/alidns/model/AddDomainGroupResult.h
	include/alibabacloud/alidns/model/AddDomainRecordRequest.h
	include/alibabacloud/alidns/model/AddDomainRecordResult.h
	include/alibabacloud/alidns/model/AddGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/AddGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/AddGtmAddressPoolRequest.h
	include/alibabacloud/alidns/model/AddGtmAddressPoolResult.h
	include/alibabacloud/alidns/model/AddGtmMonitorRequest.h
	include/alibabacloud/alidns/model/AddGtmMonitorResult.h
	include/alibabacloud/alidns/model/AddGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/AddGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/BindInstanceDomainsRequest.h
	include/alibabacloud/alidns/model/BindInstanceDomainsResult.h
	include/alibabacloud/alidns/model/ChangeDomainGroupRequest.h
	include/alibabacloud/alidns/model/ChangeDomainGroupResult.h
	include/alibabacloud/alidns/model/ChangeDomainOfDnsProductRequest.h
	include/alibabacloud/alidns/model/ChangeDomainOfDnsProductResult.h
	include/alibabacloud/alidns/model/CopyGtmConfigRequest.h
	include/alibabacloud/alidns/model/CopyGtmConfigResult.h
	include/alibabacloud/alidns/model/CreatePdnsAppKeyRequest.h
	include/alibabacloud/alidns/model/CreatePdnsAppKeyResult.h
	include/alibabacloud/alidns/model/CreatePdnsUdpIpSegmentRequest.h
	include/alibabacloud/alidns/model/CreatePdnsUdpIpSegmentResult.h
	include/alibabacloud/alidns/model/DeleteCustomLinesRequest.h
	include/alibabacloud/alidns/model/DeleteCustomLinesResult.h
	include/alibabacloud/alidns/model/DeleteDnsCacheDomainRequest.h
	include/alibabacloud/alidns/model/DeleteDnsCacheDomainResult.h
	include/alibabacloud/alidns/model/DeleteDnsGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/DeleteDnsGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/DeleteDnsGtmAddressPoolRequest.h
	include/alibabacloud/alidns/model/DeleteDnsGtmAddressPoolResult.h
	include/alibabacloud/alidns/model/DeleteDomainRequest.h
	include/alibabacloud/alidns/model/DeleteDomainResult.h
	include/alibabacloud/alidns/model/DeleteDomainGroupRequest.h
	include/alibabacloud/alidns/model/DeleteDomainGroupResult.h
	include/alibabacloud/alidns/model/DeleteDomainRecordRequest.h
	include/alibabacloud/alidns/model/DeleteDomainRecordResult.h
	include/alibabacloud/alidns/model/DeleteGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/DeleteGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/DeleteGtmAddressPoolRequest.h
	include/alibabacloud/alidns/model/DeleteGtmAddressPoolResult.h
	include/alibabacloud/alidns/model/DeleteGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/DeleteGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/DeleteSubDomainRecordsRequest.h
	include/alibabacloud/alidns/model/DeleteSubDomainRecordsResult.h
	include/alibabacloud/alidns/model/DescribeBatchResultCountRequest.h
	include/alibabacloud/alidns/model/DescribeBatchResultCountResult.h
	include/alibabacloud/alidns/model/DescribeBatchResultDetailRequest.h
	include/alibabacloud/alidns/model/DescribeBatchResultDetailResult.h
	include/alibabacloud/alidns/model/DescribeCustomLineRequest.h
	include/alibabacloud/alidns/model/DescribeCustomLineResult.h
	include/alibabacloud/alidns/model/DescribeCustomLinesRequest.h
	include/alibabacloud/alidns/model/DescribeCustomLinesResult.h
	include/alibabacloud/alidns/model/DescribeDNSSLBSubDomainsRequest.h
	include/alibabacloud/alidns/model/DescribeDNSSLBSubDomainsResult.h
	include/alibabacloud/alidns/model/DescribeDnsCacheDomainsRequest.h
	include/alibabacloud/alidns/model/DescribeDnsCacheDomainsResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAccessStrategiesRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAccessStrategiesResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAccessStrategyAvailableConfigRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAccessStrategyAvailableConfigResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAddrAttributeInfoRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAddrAttributeInfoResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAddressPoolAvailableConfigRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAddressPoolAvailableConfigResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAvailableAlertGroupRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmAvailableAlertGroupResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceAddressPoolRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceAddressPoolResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceAddressPoolsRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceAddressPoolsResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceStatusRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceStatusResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceSystemCnameRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstanceSystemCnameResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstancesRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmInstancesResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmLogsRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmLogsResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmMonitorAvailableConfigRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmMonitorAvailableConfigResult.h
	include/alibabacloud/alidns/model/DescribeDnsGtmMonitorConfigRequest.h
	include/alibabacloud/alidns/model/DescribeDnsGtmMonitorConfigResult.h
	include/alibabacloud/alidns/model/DescribeDnsProductInstanceRequest.h
	include/alibabacloud/alidns/model/DescribeDnsProductInstanceResult.h
	include/alibabacloud/alidns/model/DescribeDnsProductInstancesRequest.h
	include/alibabacloud/alidns/model/DescribeDnsProductInstancesResult.h
	include/alibabacloud/alidns/model/DescribeDohAccountStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribeDohAccountStatisticsResult.h
	include/alibabacloud/alidns/model/DescribeDohDomainStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribeDohDomainStatisticsResult.h
	include/alibabacloud/alidns/model/DescribeDohDomainStatisticsSummaryRequest.h
	include/alibabacloud/alidns/model/DescribeDohDomainStatisticsSummaryResult.h
	include/alibabacloud/alidns/model/DescribeDohSubDomainStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribeDohSubDomainStatisticsResult.h
	include/alibabacloud/alidns/model/DescribeDohSubDomainStatisticsSummaryRequest.h
	include/alibabacloud/alidns/model/DescribeDohSubDomainStatisticsSummaryResult.h
	include/alibabacloud/alidns/model/DescribeDohUserInfoRequest.h
	include/alibabacloud/alidns/model/DescribeDohUserInfoResult.h
	include/alibabacloud/alidns/model/DescribeDomainDnssecInfoRequest.h
	include/alibabacloud/alidns/model/DescribeDomainDnssecInfoResult.h
	include/alibabacloud/alidns/model/DescribeDomainGroupsRequest.h
	include/alibabacloud/alidns/model/DescribeDomainGroupsResult.h
	include/alibabacloud/alidns/model/DescribeDomainInfoRequest.h
	include/alibabacloud/alidns/model/DescribeDomainInfoResult.h
	include/alibabacloud/alidns/model/DescribeDomainLogsRequest.h
	include/alibabacloud/alidns/model/DescribeDomainLogsResult.h
	include/alibabacloud/alidns/model/DescribeDomainNsRequest.h
	include/alibabacloud/alidns/model/DescribeDomainNsResult.h
	include/alibabacloud/alidns/model/DescribeDomainRecordInfoRequest.h
	include/alibabacloud/alidns/model/DescribeDomainRecordInfoResult.h
	include/alibabacloud/alidns/model/DescribeDomainRecordsRequest.h
	include/alibabacloud/alidns/model/DescribeDomainRecordsResult.h
	include/alibabacloud/alidns/model/DescribeDomainResolveStatisticsSummaryRequest.h
	include/alibabacloud/alidns/model/DescribeDomainResolveStatisticsSummaryResult.h
	include/alibabacloud/alidns/model/DescribeDomainStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribeDomainStatisticsResult.h
	include/alibabacloud/alidns/model/DescribeDomainStatisticsSummaryRequest.h
	include/alibabacloud/alidns/model/DescribeDomainStatisticsSummaryResult.h
	include/alibabacloud/alidns/model/DescribeDomainsRequest.h
	include/alibabacloud/alidns/model/DescribeDomainsResult.h
	include/alibabacloud/alidns/model/DescribeGtmAccessStrategiesRequest.h
	include/alibabacloud/alidns/model/DescribeGtmAccessStrategiesResult.h
	include/alibabacloud/alidns/model/DescribeGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/DescribeGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/DescribeGtmAccessStrategyAvailableConfigRequest.h
	include/alibabacloud/alidns/model/DescribeGtmAccessStrategyAvailableConfigResult.h
	include/alibabacloud/alidns/model/DescribeGtmAvailableAlertGroupRequest.h
	include/alibabacloud/alidns/model/DescribeGtmAvailableAlertGroupResult.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceRequest.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceResult.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceAddressPoolRequest.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceAddressPoolResult.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceAddressPoolsRequest.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceAddressPoolsResult.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceStatusRequest.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceStatusResult.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceSystemCnameRequest.h
	include/alibabacloud/alidns/model/DescribeGtmInstanceSystemCnameResult.h
	include/alibabacloud/alidns/model/DescribeGtmInstancesRequest.h
	include/alibabacloud/alidns/model/DescribeGtmInstancesResult.h
	include/alibabacloud/alidns/model/DescribeGtmLogsRequest.h
	include/alibabacloud/alidns/model/DescribeGtmLogsResult.h
	include/alibabacloud/alidns/model/DescribeGtmMonitorAvailableConfigRequest.h
	include/alibabacloud/alidns/model/DescribeGtmMonitorAvailableConfigResult.h
	include/alibabacloud/alidns/model/DescribeGtmMonitorConfigRequest.h
	include/alibabacloud/alidns/model/DescribeGtmMonitorConfigResult.h
	include/alibabacloud/alidns/model/DescribeGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/DescribeGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/DescribeGtmRecoveryPlanAvailableConfigRequest.h
	include/alibabacloud/alidns/model/DescribeGtmRecoveryPlanAvailableConfigResult.h
	include/alibabacloud/alidns/model/DescribeGtmRecoveryPlansRequest.h
	include/alibabacloud/alidns/model/DescribeGtmRecoveryPlansResult.h
	include/alibabacloud/alidns/model/DescribeInstanceDomainsRequest.h
	include/alibabacloud/alidns/model/DescribeInstanceDomainsResult.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheInstancesRequest.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheInstancesResult.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheRemainQuotaRequest.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheRemainQuotaResult.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheTaskRequest.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheTaskResult.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheTasksRequest.h
	include/alibabacloud/alidns/model/DescribeIspFlushCacheTasksResult.h
	include/alibabacloud/alidns/model/DescribePdnsAccountSummaryRequest.h
	include/alibabacloud/alidns/model/DescribePdnsAccountSummaryResult.h
	include/alibabacloud/alidns/model/DescribePdnsAppKeyRequest.h
	include/alibabacloud/alidns/model/DescribePdnsAppKeyResult.h
	include/alibabacloud/alidns/model/DescribePdnsAppKeysRequest.h
	include/alibabacloud/alidns/model/DescribePdnsAppKeysResult.h
	include/alibabacloud/alidns/model/DescribePdnsOperateLogsRequest.h
	include/alibabacloud/alidns/model/DescribePdnsOperateLogsResult.h
	include/alibabacloud/alidns/model/DescribePdnsRequestStatisticRequest.h
	include/alibabacloud/alidns/model/DescribePdnsRequestStatisticResult.h
	include/alibabacloud/alidns/model/DescribePdnsRequestStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribePdnsRequestStatisticsResult.h
	include/alibabacloud/alidns/model/DescribePdnsThreatLogsRequest.h
	include/alibabacloud/alidns/model/DescribePdnsThreatLogsResult.h
	include/alibabacloud/alidns/model/DescribePdnsThreatStatisticRequest.h
	include/alibabacloud/alidns/model/DescribePdnsThreatStatisticResult.h
	include/alibabacloud/alidns/model/DescribePdnsThreatStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribePdnsThreatStatisticsResult.h
	include/alibabacloud/alidns/model/DescribePdnsUdpIpSegmentsRequest.h
	include/alibabacloud/alidns/model/DescribePdnsUdpIpSegmentsResult.h
	include/alibabacloud/alidns/model/DescribePdnsUserInfoRequest.h
	include/alibabacloud/alidns/model/DescribePdnsUserInfoResult.h
	include/alibabacloud/alidns/model/DescribeRecordLogsRequest.h
	include/alibabacloud/alidns/model/DescribeRecordLogsResult.h
	include/alibabacloud/alidns/model/DescribeRecordResolveStatisticsSummaryRequest.h
	include/alibabacloud/alidns/model/DescribeRecordResolveStatisticsSummaryResult.h
	include/alibabacloud/alidns/model/DescribeRecordStatisticsRequest.h
	include/alibabacloud/alidns/model/DescribeRecordStatisticsResult.h
	include/alibabacloud/alidns/model/DescribeRecordStatisticsSummaryRequest.h
	include/alibabacloud/alidns/model/DescribeRecordStatisticsSummaryResult.h
	include/alibabacloud/alidns/model/DescribeSubDomainRecordsRequest.h
	include/alibabacloud/alidns/model/DescribeSubDomainRecordsResult.h
	include/alibabacloud/alidns/model/DescribeSupportLinesRequest.h
	include/alibabacloud/alidns/model/DescribeSupportLinesResult.h
	include/alibabacloud/alidns/model/DescribeTagsRequest.h
	include/alibabacloud/alidns/model/DescribeTagsResult.h
	include/alibabacloud/alidns/model/DescribeTransferDomainsRequest.h
	include/alibabacloud/alidns/model/DescribeTransferDomainsResult.h
	include/alibabacloud/alidns/model/ExecuteGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/ExecuteGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/GetMainDomainNameRequest.h
	include/alibabacloud/alidns/model/GetMainDomainNameResult.h
	include/alibabacloud/alidns/model/GetTxtRecordForVerifyRequest.h
	include/alibabacloud/alidns/model/GetTxtRecordForVerifyResult.h
	include/alibabacloud/alidns/model/ListTagResourcesRequest.h
	include/alibabacloud/alidns/model/ListTagResourcesResult.h
	include/alibabacloud/alidns/model/ModifyHichinaDomainDNSRequest.h
	include/alibabacloud/alidns/model/ModifyHichinaDomainDNSResult.h
	include/alibabacloud/alidns/model/MoveDomainResourceGroupRequest.h
	include/alibabacloud/alidns/model/MoveDomainResourceGroupResult.h
	include/alibabacloud/alidns/model/MoveGtmResourceGroupRequest.h
	include/alibabacloud/alidns/model/MoveGtmResourceGroupResult.h
	include/alibabacloud/alidns/model/OperateBatchDomainRequest.h
	include/alibabacloud/alidns/model/OperateBatchDomainResult.h
	include/alibabacloud/alidns/model/PausePdnsServiceRequest.h
	include/alibabacloud/alidns/model/PausePdnsServiceResult.h
	include/alibabacloud/alidns/model/PreviewGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/PreviewGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/RemovePdnsAppKeyRequest.h
	include/alibabacloud/alidns/model/RemovePdnsAppKeyResult.h
	include/alibabacloud/alidns/model/RemovePdnsUdpIpSegmentRequest.h
	include/alibabacloud/alidns/model/RemovePdnsUdpIpSegmentResult.h
	include/alibabacloud/alidns/model/ResumePdnsServiceRequest.h
	include/alibabacloud/alidns/model/ResumePdnsServiceResult.h
	include/alibabacloud/alidns/model/RetrieveDomainRequest.h
	include/alibabacloud/alidns/model/RetrieveDomainResult.h
	include/alibabacloud/alidns/model/RollbackGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/RollbackGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/SetDNSSLBStatusRequest.h
	include/alibabacloud/alidns/model/SetDNSSLBStatusResult.h
	include/alibabacloud/alidns/model/SetDnsGtmAccessModeRequest.h
	include/alibabacloud/alidns/model/SetDnsGtmAccessModeResult.h
	include/alibabacloud/alidns/model/SetDnsGtmMonitorStatusRequest.h
	include/alibabacloud/alidns/model/SetDnsGtmMonitorStatusResult.h
	include/alibabacloud/alidns/model/SetDomainDnssecStatusRequest.h
	include/alibabacloud/alidns/model/SetDomainDnssecStatusResult.h
	include/alibabacloud/alidns/model/SetDomainRecordStatusRequest.h
	include/alibabacloud/alidns/model/SetDomainRecordStatusResult.h
	include/alibabacloud/alidns/model/SetGtmAccessModeRequest.h
	include/alibabacloud/alidns/model/SetGtmAccessModeResult.h
	include/alibabacloud/alidns/model/SetGtmMonitorStatusRequest.h
	include/alibabacloud/alidns/model/SetGtmMonitorStatusResult.h
	include/alibabacloud/alidns/model/SubmitIspFlushCacheTaskRequest.h
	include/alibabacloud/alidns/model/SubmitIspFlushCacheTaskResult.h
	include/alibabacloud/alidns/model/SwitchDnsGtmInstanceStrategyModeRequest.h
	include/alibabacloud/alidns/model/SwitchDnsGtmInstanceStrategyModeResult.h
	include/alibabacloud/alidns/model/TagResourcesRequest.h
	include/alibabacloud/alidns/model/TagResourcesResult.h
	include/alibabacloud/alidns/model/TransferDomainRequest.h
	include/alibabacloud/alidns/model/TransferDomainResult.h
	include/alibabacloud/alidns/model/UnbindInstanceDomainsRequest.h
	include/alibabacloud/alidns/model/UnbindInstanceDomainsResult.h
	include/alibabacloud/alidns/model/UntagResourcesRequest.h
	include/alibabacloud/alidns/model/UntagResourcesResult.h
	include/alibabacloud/alidns/model/UpdateAppKeyStateRequest.h
	include/alibabacloud/alidns/model/UpdateAppKeyStateResult.h
	include/alibabacloud/alidns/model/UpdateCustomLineRequest.h
	include/alibabacloud/alidns/model/UpdateCustomLineResult.h
	include/alibabacloud/alidns/model/UpdateDNSSLBWeightRequest.h
	include/alibabacloud/alidns/model/UpdateDNSSLBWeightResult.h
	include/alibabacloud/alidns/model/UpdateDnsCacheDomainRequest.h
	include/alibabacloud/alidns/model/UpdateDnsCacheDomainResult.h
	include/alibabacloud/alidns/model/UpdateDnsCacheDomainRemarkRequest.h
	include/alibabacloud/alidns/model/UpdateDnsCacheDomainRemarkResult.h
	include/alibabacloud/alidns/model/UpdateDnsGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/UpdateDnsGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/UpdateDnsGtmAddressPoolRequest.h
	include/alibabacloud/alidns/model/UpdateDnsGtmAddressPoolResult.h
	include/alibabacloud/alidns/model/UpdateDnsGtmInstanceGlobalConfigRequest.h
	include/alibabacloud/alidns/model/UpdateDnsGtmInstanceGlobalConfigResult.h
	include/alibabacloud/alidns/model/UpdateDnsGtmMonitorRequest.h
	include/alibabacloud/alidns/model/UpdateDnsGtmMonitorResult.h
	include/alibabacloud/alidns/model/UpdateDomainGroupRequest.h
	include/alibabacloud/alidns/model/UpdateDomainGroupResult.h
	include/alibabacloud/alidns/model/UpdateDomainRecordRequest.h
	include/alibabacloud/alidns/model/UpdateDomainRecordResult.h
	include/alibabacloud/alidns/model/UpdateDomainRecordRemarkRequest.h
	include/alibabacloud/alidns/model/UpdateDomainRecordRemarkResult.h
	include/alibabacloud/alidns/model/UpdateDomainRemarkRequest.h
	include/alibabacloud/alidns/model/UpdateDomainRemarkResult.h
	include/alibabacloud/alidns/model/UpdateGtmAccessStrategyRequest.h
	include/alibabacloud/alidns/model/UpdateGtmAccessStrategyResult.h
	include/alibabacloud/alidns/model/UpdateGtmAddressPoolRequest.h
	include/alibabacloud/alidns/model/UpdateGtmAddressPoolResult.h
	include/alibabacloud/alidns/model/UpdateGtmInstanceGlobalConfigRequest.h
	include/alibabacloud/alidns/model/UpdateGtmInstanceGlobalConfigResult.h
	include/alibabacloud/alidns/model/UpdateGtmMonitorRequest.h
	include/alibabacloud/alidns/model/UpdateGtmMonitorResult.h
	include/alibabacloud/alidns/model/UpdateGtmRecoveryPlanRequest.h
	include/alibabacloud/alidns/model/UpdateGtmRecoveryPlanResult.h
	include/alibabacloud/alidns/model/UpdateIspFlushCacheInstanceConfigRequest.h
	include/alibabacloud/alidns/model/UpdateIspFlushCacheInstanceConfigResult.h
	include/alibabacloud/alidns/model/ValidateDnsGtmCnameRrCanUseRequest.h
	include/alibabacloud/alidns/model/ValidateDnsGtmCnameRrCanUseResult.h
	include/alibabacloud/alidns/model/ValidatePdnsUdpIpSegmentRequest.h
	include/alibabacloud/alidns/model/ValidatePdnsUdpIpSegmentResult.h )

set(alidns_src 
	src/AlidnsClient.cc
	src/model/AddCustomLineRequest.cc
	src/model/AddCustomLineResult.cc
	src/model/AddDnsCacheDomainRequest.cc
	src/model/AddDnsCacheDomainResult.cc
	src/model/AddDnsGtmAccessStrategyRequest.cc
	src/model/AddDnsGtmAccessStrategyResult.cc
	src/model/AddDnsGtmAddressPoolRequest.cc
	src/model/AddDnsGtmAddressPoolResult.cc
	src/model/AddDnsGtmMonitorRequest.cc
	src/model/AddDnsGtmMonitorResult.cc
	src/model/AddDomainRequest.cc
	src/model/AddDomainResult.cc
	src/model/AddDomainBackupRequest.cc
	src/model/AddDomainBackupResult.cc
	src/model/AddDomainGroupRequest.cc
	src/model/AddDomainGroupResult.cc
	src/model/AddDomainRecordRequest.cc
	src/model/AddDomainRecordResult.cc
	src/model/AddGtmAccessStrategyRequest.cc
	src/model/AddGtmAccessStrategyResult.cc
	src/model/AddGtmAddressPoolRequest.cc
	src/model/AddGtmAddressPoolResult.cc
	src/model/AddGtmMonitorRequest.cc
	src/model/AddGtmMonitorResult.cc
	src/model/AddGtmRecoveryPlanRequest.cc
	src/model/AddGtmRecoveryPlanResult.cc
	src/model/BindInstanceDomainsRequest.cc
	src/model/BindInstanceDomainsResult.cc
	src/model/ChangeDomainGroupRequest.cc
	src/model/ChangeDomainGroupResult.cc
	src/model/ChangeDomainOfDnsProductRequest.cc
	src/model/ChangeDomainOfDnsProductResult.cc
	src/model/CopyGtmConfigRequest.cc
	src/model/CopyGtmConfigResult.cc
	src/model/CreatePdnsAppKeyRequest.cc
	src/model/CreatePdnsAppKeyResult.cc
	src/model/CreatePdnsUdpIpSegmentRequest.cc
	src/model/CreatePdnsUdpIpSegmentResult.cc
	src/model/DeleteCustomLinesRequest.cc
	src/model/DeleteCustomLinesResult.cc
	src/model/DeleteDnsCacheDomainRequest.cc
	src/model/DeleteDnsCacheDomainResult.cc
	src/model/DeleteDnsGtmAccessStrategyRequest.cc
	src/model/DeleteDnsGtmAccessStrategyResult.cc
	src/model/DeleteDnsGtmAddressPoolRequest.cc
	src/model/DeleteDnsGtmAddressPoolResult.cc
	src/model/DeleteDomainRequest.cc
	src/model/DeleteDomainResult.cc
	src/model/DeleteDomainGroupRequest.cc
	src/model/DeleteDomainGroupResult.cc
	src/model/DeleteDomainRecordRequest.cc
	src/model/DeleteDomainRecordResult.cc
	src/model/DeleteGtmAccessStrategyRequest.cc
	src/model/DeleteGtmAccessStrategyResult.cc
	src/model/DeleteGtmAddressPoolRequest.cc
	src/model/DeleteGtmAddressPoolResult.cc
	src/model/DeleteGtmRecoveryPlanRequest.cc
	src/model/DeleteGtmRecoveryPlanResult.cc
	src/model/DeleteSubDomainRecordsRequest.cc
	src/model/DeleteSubDomainRecordsResult.cc
	src/model/DescribeBatchResultCountRequest.cc
	src/model/DescribeBatchResultCountResult.cc
	src/model/DescribeBatchResultDetailRequest.cc
	src/model/DescribeBatchResultDetailResult.cc
	src/model/DescribeCustomLineRequest.cc
	src/model/DescribeCustomLineResult.cc
	src/model/DescribeCustomLinesRequest.cc
	src/model/DescribeCustomLinesResult.cc
	src/model/DescribeDNSSLBSubDomainsRequest.cc
	src/model/DescribeDNSSLBSubDomainsResult.cc
	src/model/DescribeDnsCacheDomainsRequest.cc
	src/model/DescribeDnsCacheDomainsResult.cc
	src/model/DescribeDnsGtmAccessStrategiesRequest.cc
	src/model/DescribeDnsGtmAccessStrategiesResult.cc
	src/model/DescribeDnsGtmAccessStrategyRequest.cc
	src/model/DescribeDnsGtmAccessStrategyResult.cc
	src/model/DescribeDnsGtmAccessStrategyAvailableConfigRequest.cc
	src/model/DescribeDnsGtmAccessStrategyAvailableConfigResult.cc
	src/model/DescribeDnsGtmAddrAttributeInfoRequest.cc
	src/model/DescribeDnsGtmAddrAttributeInfoResult.cc
	src/model/DescribeDnsGtmAddressPoolAvailableConfigRequest.cc
	src/model/DescribeDnsGtmAddressPoolAvailableConfigResult.cc
	src/model/DescribeDnsGtmAvailableAlertGroupRequest.cc
	src/model/DescribeDnsGtmAvailableAlertGroupResult.cc
	src/model/DescribeDnsGtmInstanceRequest.cc
	src/model/DescribeDnsGtmInstanceResult.cc
	src/model/DescribeDnsGtmInstanceAddressPoolRequest.cc
	src/model/DescribeDnsGtmInstanceAddressPoolResult.cc
	src/model/DescribeDnsGtmInstanceAddressPoolsRequest.cc
	src/model/DescribeDnsGtmInstanceAddressPoolsResult.cc
	src/model/DescribeDnsGtmInstanceStatusRequest.cc
	src/model/DescribeDnsGtmInstanceStatusResult.cc
	src/model/DescribeDnsGtmInstanceSystemCnameRequest.cc
	src/model/DescribeDnsGtmInstanceSystemCnameResult.cc
	src/model/DescribeDnsGtmInstancesRequest.cc
	src/model/DescribeDnsGtmInstancesResult.cc
	src/model/DescribeDnsGtmLogsRequest.cc
	src/model/DescribeDnsGtmLogsResult.cc
	src/model/DescribeDnsGtmMonitorAvailableConfigRequest.cc
	src/model/DescribeDnsGtmMonitorAvailableConfigResult.cc
	src/model/DescribeDnsGtmMonitorConfigRequest.cc
	src/model/DescribeDnsGtmMonitorConfigResult.cc
	src/model/DescribeDnsProductInstanceRequest.cc
	src/model/DescribeDnsProductInstanceResult.cc
	src/model/DescribeDnsProductInstancesRequest.cc
	src/model/DescribeDnsProductInstancesResult.cc
	src/model/DescribeDohAccountStatisticsRequest.cc
	src/model/DescribeDohAccountStatisticsResult.cc
	src/model/DescribeDohDomainStatisticsRequest.cc
	src/model/DescribeDohDomainStatisticsResult.cc
	src/model/DescribeDohDomainStatisticsSummaryRequest.cc
	src/model/DescribeDohDomainStatisticsSummaryResult.cc
	src/model/DescribeDohSubDomainStatisticsRequest.cc
	src/model/DescribeDohSubDomainStatisticsResult.cc
	src/model/DescribeDohSubDomainStatisticsSummaryRequest.cc
	src/model/DescribeDohSubDomainStatisticsSummaryResult.cc
	src/model/DescribeDohUserInfoRequest.cc
	src/model/DescribeDohUserInfoResult.cc
	src/model/DescribeDomainDnssecInfoRequest.cc
	src/model/DescribeDomainDnssecInfoResult.cc
	src/model/DescribeDomainGroupsRequest.cc
	src/model/DescribeDomainGroupsResult.cc
	src/model/DescribeDomainInfoRequest.cc
	src/model/DescribeDomainInfoResult.cc
	src/model/DescribeDomainLogsRequest.cc
	src/model/DescribeDomainLogsResult.cc
	src/model/DescribeDomainNsRequest.cc
	src/model/DescribeDomainNsResult.cc
	src/model/DescribeDomainRecordInfoRequest.cc
	src/model/DescribeDomainRecordInfoResult.cc
	src/model/DescribeDomainRecordsRequest.cc
	src/model/DescribeDomainRecordsResult.cc
	src/model/DescribeDomainResolveStatisticsSummaryRequest.cc
	src/model/DescribeDomainResolveStatisticsSummaryResult.cc
	src/model/DescribeDomainStatisticsRequest.cc
	src/model/DescribeDomainStatisticsResult.cc
	src/model/DescribeDomainStatisticsSummaryRequest.cc
	src/model/DescribeDomainStatisticsSummaryResult.cc
	src/model/DescribeDomainsRequest.cc
	src/model/DescribeDomainsResult.cc
	src/model/DescribeGtmAccessStrategiesRequest.cc
	src/model/DescribeGtmAccessStrategiesResult.cc
	src/model/DescribeGtmAccessStrategyRequest.cc
	src/model/DescribeGtmAccessStrategyResult.cc
	src/model/DescribeGtmAccessStrategyAvailableConfigRequest.cc
	src/model/DescribeGtmAccessStrategyAvailableConfigResult.cc
	src/model/DescribeGtmAvailableAlertGroupRequest.cc
	src/model/DescribeGtmAvailableAlertGroupResult.cc
	src/model/DescribeGtmInstanceRequest.cc
	src/model/DescribeGtmInstanceResult.cc
	src/model/DescribeGtmInstanceAddressPoolRequest.cc
	src/model/DescribeGtmInstanceAddressPoolResult.cc
	src/model/DescribeGtmInstanceAddressPoolsRequest.cc
	src/model/DescribeGtmInstanceAddressPoolsResult.cc
	src/model/DescribeGtmInstanceStatusRequest.cc
	src/model/DescribeGtmInstanceStatusResult.cc
	src/model/DescribeGtmInstanceSystemCnameRequest.cc
	src/model/DescribeGtmInstanceSystemCnameResult.cc
	src/model/DescribeGtmInstancesRequest.cc
	src/model/DescribeGtmInstancesResult.cc
	src/model/DescribeGtmLogsRequest.cc
	src/model/DescribeGtmLogsResult.cc
	src/model/DescribeGtmMonitorAvailableConfigRequest.cc
	src/model/DescribeGtmMonitorAvailableConfigResult.cc
	src/model/DescribeGtmMonitorConfigRequest.cc
	src/model/DescribeGtmMonitorConfigResult.cc
	src/model/DescribeGtmRecoveryPlanRequest.cc
	src/model/DescribeGtmRecoveryPlanResult.cc
	src/model/DescribeGtmRecoveryPlanAvailableConfigRequest.cc
	src/model/DescribeGtmRecoveryPlanAvailableConfigResult.cc
	src/model/DescribeGtmRecoveryPlansRequest.cc
	src/model/DescribeGtmRecoveryPlansResult.cc
	src/model/DescribeInstanceDomainsRequest.cc
	src/model/DescribeInstanceDomainsResult.cc
	src/model/DescribeIspFlushCacheInstancesRequest.cc
	src/model/DescribeIspFlushCacheInstancesResult.cc
	src/model/DescribeIspFlushCacheRemainQuotaRequest.cc
	src/model/DescribeIspFlushCacheRemainQuotaResult.cc
	src/model/DescribeIspFlushCacheTaskRequest.cc
	src/model/DescribeIspFlushCacheTaskResult.cc
	src/model/DescribeIspFlushCacheTasksRequest.cc
	src/model/DescribeIspFlushCacheTasksResult.cc
	src/model/DescribePdnsAccountSummaryRequest.cc
	src/model/DescribePdnsAccountSummaryResult.cc
	src/model/DescribePdnsAppKeyRequest.cc
	src/model/DescribePdnsAppKeyResult.cc
	src/model/DescribePdnsAppKeysRequest.cc
	src/model/DescribePdnsAppKeysResult.cc
	src/model/DescribePdnsOperateLogsRequest.cc
	src/model/DescribePdnsOperateLogsResult.cc
	src/model/DescribePdnsRequestStatisticRequest.cc
	src/model/DescribePdnsRequestStatisticResult.cc
	src/model/DescribePdnsRequestStatisticsRequest.cc
	src/model/DescribePdnsRequestStatisticsResult.cc
	src/model/DescribePdnsThreatLogsRequest.cc
	src/model/DescribePdnsThreatLogsResult.cc
	src/model/DescribePdnsThreatStatisticRequest.cc
	src/model/DescribePdnsThreatStatisticResult.cc
	src/model/DescribePdnsThreatStatisticsRequest.cc
	src/model/DescribePdnsThreatStatisticsResult.cc
	src/model/DescribePdnsUdpIpSegmentsRequest.cc
	src/model/DescribePdnsUdpIpSegmentsResult.cc
	src/model/DescribePdnsUserInfoRequest.cc
	src/model/DescribePdnsUserInfoResult.cc
	src/model/DescribeRecordLogsRequest.cc
	src/model/DescribeRecordLogsResult.cc
	src/model/DescribeRecordResolveStatisticsSummaryRequest.cc
	src/model/DescribeRecordResolveStatisticsSummaryResult.cc
	src/model/DescribeRecordStatisticsRequest.cc
	src/model/DescribeRecordStatisticsResult.cc
	src/model/DescribeRecordStatisticsSummaryRequest.cc
	src/model/DescribeRecordStatisticsSummaryResult.cc
	src/model/DescribeSubDomainRecordsRequest.cc
	src/model/DescribeSubDomainRecordsResult.cc
	src/model/DescribeSupportLinesRequest.cc
	src/model/DescribeSupportLinesResult.cc
	src/model/DescribeTagsRequest.cc
	src/model/DescribeTagsResult.cc
	src/model/DescribeTransferDomainsRequest.cc
	src/model/DescribeTransferDomainsResult.cc
	src/model/ExecuteGtmRecoveryPlanRequest.cc
	src/model/ExecuteGtmRecoveryPlanResult.cc
	src/model/GetMainDomainNameRequest.cc
	src/model/GetMainDomainNameResult.cc
	src/model/GetTxtRecordForVerifyRequest.cc
	src/model/GetTxtRecordForVerifyResult.cc
	src/model/ListTagResourcesRequest.cc
	src/model/ListTagResourcesResult.cc
	src/model/ModifyHichinaDomainDNSRequest.cc
	src/model/ModifyHichinaDomainDNSResult.cc
	src/model/MoveDomainResourceGroupRequest.cc
	src/model/MoveDomainResourceGroupResult.cc
	src/model/MoveGtmResourceGroupRequest.cc
	src/model/MoveGtmResourceGroupResult.cc
	src/model/OperateBatchDomainRequest.cc
	src/model/OperateBatchDomainResult.cc
	src/model/PausePdnsServiceRequest.cc
	src/model/PausePdnsServiceResult.cc
	src/model/PreviewGtmRecoveryPlanRequest.cc
	src/model/PreviewGtmRecoveryPlanResult.cc
	src/model/RemovePdnsAppKeyRequest.cc
	src/model/RemovePdnsAppKeyResult.cc
	src/model/RemovePdnsUdpIpSegmentRequest.cc
	src/model/RemovePdnsUdpIpSegmentResult.cc
	src/model/ResumePdnsServiceRequest.cc
	src/model/ResumePdnsServiceResult.cc
	src/model/RetrieveDomainRequest.cc
	src/model/RetrieveDomainResult.cc
	src/model/RollbackGtmRecoveryPlanRequest.cc
	src/model/RollbackGtmRecoveryPlanResult.cc
	src/model/SetDNSSLBStatusRequest.cc
	src/model/SetDNSSLBStatusResult.cc
	src/model/SetDnsGtmAccessModeRequest.cc
	src/model/SetDnsGtmAccessModeResult.cc
	src/model/SetDnsGtmMonitorStatusRequest.cc
	src/model/SetDnsGtmMonitorStatusResult.cc
	src/model/SetDomainDnssecStatusRequest.cc
	src/model/SetDomainDnssecStatusResult.cc
	src/model/SetDomainRecordStatusRequest.cc
	src/model/SetDomainRecordStatusResult.cc
	src/model/SetGtmAccessModeRequest.cc
	src/model/SetGtmAccessModeResult.cc
	src/model/SetGtmMonitorStatusRequest.cc
	src/model/SetGtmMonitorStatusResult.cc
	src/model/SubmitIspFlushCacheTaskRequest.cc
	src/model/SubmitIspFlushCacheTaskResult.cc
	src/model/SwitchDnsGtmInstanceStrategyModeRequest.cc
	src/model/SwitchDnsGtmInstanceStrategyModeResult.cc
	src/model/TagResourcesRequest.cc
	src/model/TagResourcesResult.cc
	src/model/TransferDomainRequest.cc
	src/model/TransferDomainResult.cc
	src/model/UnbindInstanceDomainsRequest.cc
	src/model/UnbindInstanceDomainsResult.cc
	src/model/UntagResourcesRequest.cc
	src/model/UntagResourcesResult.cc
	src/model/UpdateAppKeyStateRequest.cc
	src/model/UpdateAppKeyStateResult.cc
	src/model/UpdateCustomLineRequest.cc
	src/model/UpdateCustomLineResult.cc
	src/model/UpdateDNSSLBWeightRequest.cc
	src/model/UpdateDNSSLBWeightResult.cc
	src/model/UpdateDnsCacheDomainRequest.cc
	src/model/UpdateDnsCacheDomainResult.cc
	src/model/UpdateDnsCacheDomainRemarkRequest.cc
	src/model/UpdateDnsCacheDomainRemarkResult.cc
	src/model/UpdateDnsGtmAccessStrategyRequest.cc
	src/model/UpdateDnsGtmAccessStrategyResult.cc
	src/model/UpdateDnsGtmAddressPoolRequest.cc
	src/model/UpdateDnsGtmAddressPoolResult.cc
	src/model/UpdateDnsGtmInstanceGlobalConfigRequest.cc
	src/model/UpdateDnsGtmInstanceGlobalConfigResult.cc
	src/model/UpdateDnsGtmMonitorRequest.cc
	src/model/UpdateDnsGtmMonitorResult.cc
	src/model/UpdateDomainGroupRequest.cc
	src/model/UpdateDomainGroupResult.cc
	src/model/UpdateDomainRecordRequest.cc
	src/model/UpdateDomainRecordResult.cc
	src/model/UpdateDomainRecordRemarkRequest.cc
	src/model/UpdateDomainRecordRemarkResult.cc
	src/model/UpdateDomainRemarkRequest.cc
	src/model/UpdateDomainRemarkResult.cc
	src/model/UpdateGtmAccessStrategyRequest.cc
	src/model/UpdateGtmAccessStrategyResult.cc
	src/model/UpdateGtmAddressPoolRequest.cc
	src/model/UpdateGtmAddressPoolResult.cc
	src/model/UpdateGtmInstanceGlobalConfigRequest.cc
	src/model/UpdateGtmInstanceGlobalConfigResult.cc
	src/model/UpdateGtmMonitorRequest.cc
	src/model/UpdateGtmMonitorResult.cc
	src/model/UpdateGtmRecoveryPlanRequest.cc
	src/model/UpdateGtmRecoveryPlanResult.cc
	src/model/UpdateIspFlushCacheInstanceConfigRequest.cc
	src/model/UpdateIspFlushCacheInstanceConfigResult.cc
	src/model/ValidateDnsGtmCnameRrCanUseRequest.cc
	src/model/ValidateDnsGtmCnameRrCanUseResult.cc
	src/model/ValidatePdnsUdpIpSegmentRequest.cc
	src/model/ValidatePdnsUdpIpSegmentResult.cc )

add_library(alidns ${LIB_TYPE}
	${alidns_public_header}
	${alidns_public_header_model}
	${alidns_src})

set_target_properties(alidns
	PROPERTIES
	LINKER_LANGUAGE CXX
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
	OUTPUT_NAME ${TARGET_OUTPUT_NAME_PREFIX}alidns
	)

if(${LIB_TYPE} STREQUAL "SHARED")
	set_target_properties(alidns
		PROPERTIES
		DEFINE_SYMBOL ALIBABACLOUD_ALIDNS_LIBRARY)
endif()

target_include_directories(alidns
	PRIVATE include
		${CMAKE_SOURCE_DIR}/core/include
	)
target_link_libraries(alidns
	core)

if(CMAKE_HOST_WIN32)
	ExternalProject_Get_Property(jsoncpp INSTALL_DIR)
	set(jsoncpp_install_dir ${INSTALL_DIR})
	add_dependencies(alidns
		jsoncpp)
	target_include_directories(alidns
		PRIVATE	${jsoncpp_install_dir}/include)
	target_link_libraries(alidns
		${jsoncpp_install_dir}/lib/jsoncpp.lib)
	set_target_properties(alidns
    	PROPERTIES
    		COMPILE_OPTIONS "/bigobj")
else()
	target_include_directories(alidns
		PRIVATE /usr/include/jsoncpp)
	target_link_libraries(alidns
		jsoncpp)
endif()

install(FILES ${alidns_public_header}
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/alibabacloud/alidns)
install(FILES ${alidns_public_header_model}
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/alibabacloud/alidns/model)
install(TARGETS alidns
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	)